[package]
name = "me-learning-luminance"
version = "0.1.0"
authors = ["Zicklag <zicklag@katharostech.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
luminance-front = "0.3.1"
luminance-windowing = "0.9.3"
luminance = "0.43.2"
instant = "0.1.9"

[target.'cfg(not(any(target_arch = "wasm32")))'.dependencies]
luminance-glutin = "0.11.3"
glutin = "0.26.0"

[target.'cfg(target_arch = "wasm32")'.dependencies]
web-sys = { version = "0.3", features=["HtmlCanvasElement", "WebGl2RenderingContext", "Window", "console"] }
luminance-web-sys = "0.2.2"
wasm-bindgen = { version = "0.2" }
console_error_panic_hook = "0.1.6"
# Fixes WASM bindgen error: https://github.com/rustwasm/wasm-bindgen/issues/2215#issuecomment-796244209
parking_lot = { version = "0.11.1", features = ["wasm-bindgen"]}

[build-dependencies]
cfg_aliases = "0.1.1"
